fix light mode text unreadable

--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 html, body {
 	margin: 0;	
 	background-color: ##303030;
-	color: #ddd;	
 }
 
 .label {
